EXTRA_DIST  =  reconf \
configure \
input/briowu \
input/blast \
input/init.dat \
input/input.dat \
input/input.dat.x \
input/input.dat.y \
input/input.jet \
input/osullivan2 \
input/try \
input/ryujones1 \
input/ryujones2 \
input/ryujones3 \
input/ryujones4 \
input/ryujones5 \
input/ryujones6 \
input/ryujones7 \
input/ryujones8 \
input/ryujones9 \
input/ryujones10 \
input/ryujones11 \
input/ryujones12 \
output/test.sh \
output/colorbar.pro \
output/draw_resize.pro \
output/mplot.pro \
output/myplot.pro \
output/new.pro \
output/read_hdf5.pro \
output/rplot.pro \
try.net \
test.sh \
trywin.net
SUBDIRS = m4 src doc
