bin_PROGRAMS = falle
falle_SOURCES = boundary.cpp \
	initialise.cpp \
	log.cpp \
	maxspeed.cpp \
	roe.cpp \
	TwoDim.cpp \
	vanleer.cpp \
	flux.cpp \
	hlld.cpp \
	initialise_jet.cpp \
	main.cpp \
	output.cpp \
	update.cpp \
	vanleer_fvsplit.cpp \
	cooling.cpp \
	tabfind.cpp \
	locate.cpp \
	eigenvectors.cpp \
	riemann.cpp \
	sgn.cpp \
	molcool.cpp 
INCLUDES = -I@top_srcdir@/src/headers -I${HOME}/hdf5/include -I@top_srcdir@/src/tnt -I${EXT_INCLUDES}
SUBDIRS = headers tnt
